--- a/src/main/resources/static/css/include/aside-best.css
+++ b/src/main/resources/static/css/include/aside-best.css
@@ -15,6 +15,7 @@ main > aside {
     box-shadow: 0 0 5px rgba(55, 55, 5, 0.2);
     position: fixed;
     top: 300px;
+    left: 115px;
 }
 
 .best > h1 {
